--- a/views/htmlvisual.html
+++ b/views/htmlvisual.html
@@ -44,11 +44,93 @@
     </nav>
 
     <!-- Main -->
+    <main class="container container-fluid mx-auto">
 
-    <main class="container container-fluid mx-5">
+        <!-- Favorites -->
+        <div class="container mt-3 p-4 rounded cstm-light-text cstm-shadow">
+            <div class="row justify-content-center">
+                <div class="col-12 mb-2">
+                    <h2>Your Favorites</h2>
+                </div>
+                <!-- placeholder -->
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 1" class="img-fluid">
+                    </a>
+                    <p>Dish 1</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 2" class="img-fluid">
+                    </a>
+                    <p>Dish 2</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 3" class="img-fluid">
+                    </a>
+                    <p>Dish 3</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 4" class="img-fluid">
+                    </a>
+                    <p>Dish 4</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 5" class="img-fluid">
+                    </a>
+                    <p>Dish 5</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- You might like... -->
+        <div class="container mt-3 p-4 rounded cstm-light-text cstm-shadow">
+            <div class="row justify-content-center">
+                <div class="col-12 mb-2">
+                    <h2>You might like...</h2>
+                </div>
+                <!-- placeholder  -->
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 6" class="img-fluid">
+                    </a>
+                    <p>Dish 6</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 7" class="img-fluid">
+                    </a>
+                    <p>Dish 7</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 8" class="img-fluid">
+                    </a>
+                    <p>Dish 8</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 9" class="img-fluid">
+                    </a>
+                    <p>Dish 9</p>
+                </div>
+                <div class="col-sm-2 col-6 mb-4">
+                    <a href="#your_link_here">
+                        <img src="https://via.placeholder.com/125x125" alt="Dish 10" class="img-fluid">
+                    </a>
+                    <p>Dish 10</p>
+                </div>
+            </div>
+        </div>
 
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-cE2EE1NLeV1gt1G8v+uA4lD0gGk4zVD1tdJzK3Rt7bk1pR4l5re86ZRQ9DoVJvpt"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
