edited some styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/* green/brown palette
+/* green/brown palette 
 :root {
     --bg: #F0EAD2;
     --dark: #6C7E3A;
@@ -7,29 +7,32 @@
     --accent1: #A98467;
     --accent2: #6C584C; 
     --shadow: #302722;
-} */
+} 
+
 
 /* blue palette 
-:root {
+ :root {
     --bg: #d6e3ee;
     --dark: #1c416f;
-    --light: #eef4ed;
-    --light2: #3e5c76;
+    --light: #3e5c76;
+    --light2: #eef4ed;
     --accent1: #134074;
     --accent2: #13315c; 
     --shadow: #061323;
 }
-*/
+
+
 /* red/pink palette */
 :root {
     --bg: #f3f5e9;
-    --dark: #d64550;
-    --light: #eef4ed;
-    --light2: #ea9e8d;
+    --dark: #c73541;
+    --light: #ea9e8d;
+    --light2: #eef4ed;
     --accent1: #daefb3;
     --accent2: #eef4d4; 
-    --shadow: #3c0919;
+    --shadow: #682e40;
 }
+*/
 
 body {
     background-color: var(--bg);
@@ -47,7 +50,7 @@ body {
 }
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-nav .nav-link {
-    color: var(--light2) !important; 
+    color: var(--light) !important; 
 }
 
 .cstm-btn {
@@ -63,5 +66,5 @@ body {
 }
 
 .cstm-shadow {
-    box-shadow: 10px 10px 5px var(--shadow);
+    box-shadow: 7px 7px 5px var(--shadow);
 }
