--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 /* NOTE:: i know these look awful right now, once you let me know what color schemes you want
-i can make them a little less one colory. i just wanted to give a general idea of the colors */
+i can make them a little less one-colory. i just wanted to give a general idea of the colors i was thinking*/
+
 /* orange & cream 
 :root {
     --bg: #fff6e0;
