--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 /* NOTE:: i know these look awful right now, once you let me know what color schemes you want
-i can make them a little less one-colory. i just wanted to give a general idea of the colors i was thinking*/
+i can make them a little less one-colory. i just wanted to give a general idea of the colors
+i was thinking. to see how they look go to the views folder and open htmlvisual.html in your browswer */
 
 /* orange & cream 
 :root {
