--- a/views/html-visual/dashboard.html
+++ b/views/html-visual/dashboard.html
@@ -48,7 +48,7 @@
     <main class="container container-fluid mx-auto">
 
         <!-- User Information -->
-<!--                     <div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
+                     <div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
                 <div class="row justify-content-center">
                     <div class="col-12 mb-2">
                         <h2>User Information</h2>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div> 
 
                 <!-- User Recipes -->
                 <div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
