--- a/views/html-visual/recipepage.html
+++ b/views/html-visual/recipepage.html
@@ -60,7 +60,10 @@
             <div class="row justify-content-center">
 
                 <div class="row justify-content-center">
-                    <div class="col-sm-3 col-6">
+                    <div class="col-sm-3 col-6 position-relative">
+                        <div class="position-absolute bottom-box-2">
+                            Recipe Author
+                        </div>
                         <img src="https://via.placeholder.com/125x125" alt="Dish 1" id="imageUrl" class="card-img-top">
                     </div>
                     <div class="col-sm-9 col-6">
