--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,9 @@
 
 body {
     background-color: var(--bg);
+    background-image: url('/public/assets/vecteezy_abstract-seamless-pattern-with-tableware-forks-spoons-and_.jpg');
+    background-repeat: repeat;
+    background-size: 100%;
 }
 p {
     color: var(--light2);
@@ -26,9 +29,9 @@ h1 {
 }
 
 h2 {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     text-shadow: var(--shadow) 2px 2px 5px;
-    font-weight: 700 ;
+    font-weight: 400;
     padding: 15px 0px 0px 0px;
 }
 
@@ -63,10 +66,14 @@ h5 {
     background-color: var(--dark) !important; 
     color: var(--light2) !important; 
 }
-.navbar-custom .navbar-brand,
-.navbar-custom .navbar-nav .nav-link {
+
+.nav-link {
     color: white !important; 
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
+
+
 
 .cstm-btn {
     color:var(--dark) !important; 
