changed some classes, added scripts

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,16 +9,18 @@
         <div class="container lg-card-body rounded-bottom p-5 mb-4">
             <div class="row justify-content-center">
                  <!-- Login Form -->
-                 <form class="col-8">
+                 <form class="col-8 login-form">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username-login" name="username" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password-login" name="password" required>
                     </div>
                     <button type="submit" id="login-button" class="cstm-btn btn btn-primary">Login</button>
                 </form>
             </div>
         </div>
+
+        <script src="/js/login.js"></script>
