--- a/views/html-visual/recipepage.html
+++ b/views/html-visual/recipepage.html
@@ -82,13 +82,51 @@
                         <div class="col-12 mt-4">
                            <p id="instructions">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Fermentum et sollicitudin ac orci phasellus. Eleifend quam adipiscing vitae proin. Id porta nibh venenatis cras. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. In pellentesque massa placerat duis ultricies lacus sed turpis tincidunt. Purus faucibus ornare suspendisse sed nisi. Purus sit amet volutpat consequat mauris. Sed arcu non odio euismod lacinia at quis risus. Adipiscing enim eu turpis egestas pretium aenean pharetra magna. Vulputate dignissim suspendisse in est ante in nibh mauris cursus.</p> 
                         </div>
-
-
                     </div>
                 </div>
             </div>
-
-
+        </div>
+    
+        <div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
+            <div class="row justify-content-center">
+                <div class="col-12 mb-2">
+                    <h2 id="comments">Comments</h2>
+                </div>
+            </div>
+        </div>
+        
+        <div class="container lg-card-body rounded-bottom p-5 mb-4">
+            <!-- Add Comments-->
+            <div class="row justify-content-center mb-4">
+                <div class="col-12">
+                    <form>
+                        <div class="form-group">
+                            <label for="comment"><h6>Leave a Comment!</h6></label>
+                            <textarea class="form-control mb-1" id="comment" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary cstm-btn">Submit</button>
+                    </form>
+                </div>
+            </div>
+        
+            <!-- User Comments -->
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">Username</div>
+                        <div class="card-body">
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        
+            
     </main>
 
 
