--- a/views/recipepage.handlebars
+++ b/views/recipepage.handlebars
@@ -13,7 +13,7 @@
                 <div class="position-absolute bottom-box-2">
                     {{recipe.User.username}}
                 </div>
-                <img src="{{{image}}}" alt="Dish 1" id="image" class="card-img-top">
+                <img src="{{image}}" alt="Dish 1" id="image" class="card-img-top rounded-bottom">
             </div>
             <div class="col-sm-9 col-6">
                 <h4>Ingredients:</h4>
