--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
     <!-- Nav -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-5 px-5 cstm-light-text bottom-border">
     <div class="container-fluid align-items-end">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <h1>Project #2</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
