dynamically load recipes on homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,7 +15,7 @@
                 <!-- Dish -->
                 <div class="col-sm-2 col-6 mb-4">
                     <div class="card position-relative">
-                        <img src="{{this.imageurl}}" alt="{{this.title}}" class="card-img-top">
+                        <img src="{{this.image}}" alt="{{this.title}}" class="card-img-top">
                         <div class="position-absolute bottom-box">
                             recipe author
                         </div>
@@ -43,7 +43,7 @@
                 <!-- Dish -->
                 <div class="col-sm-2 col-6 mb-4">
                     <div class="card position-relative">
-                        <img src="{{this.imageurl}}" alt="{{this.title}}" class="card-img-top">
+                        <img src="{{this.image}}" alt="{{this.title}}" class="card-img-top">
                         <div class="position-absolute bottom-box">
                             recipe author
                         </div>
