--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,9 @@ h6 {
     font-size: 1.3rem;
 }
 
+a {
+    text-decoration: none;
+}
 .lg-card-body {
     background: var(--cardbody);
 }
@@ -59,6 +62,15 @@ h6 {
 .card {
     box-shadow: 7px 7px 5px var(--shadow);
 }
+
+
+.custom-image {
+    width: 100%; /* Set the width to 100% of the parent element */
+    height: 180px;
+    object-fit: cover;
+}
+
+
 
 .card-text {
     color: var(--shadow);
@@ -107,7 +119,7 @@ h6 {
 }
 
 .bottom-box {
-    bottom: 70px;
+    bottom: 95px;
     background-color: white;
     padding: 0px 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -126,6 +138,9 @@ h6 {
     font-style: italic;
 }
 
+.cstm-card-body {
+    height: 90px;
+}
 .form-label {
     color: var(--light2);
 }
