adjusted the html for the multer, along with created JS for the form handler and added the route to upload the selected file and the new recipe.

--- a/views/newrecipe.handlebars
+++ b/views/newrecipe.handlebars
@@ -10,22 +10,24 @@
             <div class="container lg-card-body rounded-bottom p-5 mb-4">
                 <div class="row justify-content-center">
                     <div class="col-8">
-                        <form class="create-recipe">
+                        <!--multer.js requires that the form it interacts with to have enctype="multipart/form-data"-->
+                        <form id="create-recipe" class="create-recipe" enctype="multipart/form-data">
                             <div class="mb-3">
                                 <label for="recipeName" class="form-label bold">Recipe Name:</label>
-                                <input type="text" class="form-control" id="recipeName" required>
+                                <input type="text" class="form-control" id="recipeName" name="recipeName" required>
                             </div>
                             <div class="mb-3">
                                 <label for="ingredients" class="form-label bold">Ingredients:</label>
-                                <textarea class="form-control" id="ingredients" rows="5" required></textarea>
+                                <textarea class="form-control" id="ingredients" rows="5" name="ingredients" required></textarea>
                             </div>
                             <div class="mb-3">
                                 <label for="instructions" class="form-label bold">Instructions:</label>
-                                <textarea class="form-control" id="instructions" rows="5" required></textarea>
+                                <textarea class="form-control" id="instructions" rows="5" name="instructions" required></textarea>
                             </div>
+                            <!--file input type for the multer addition-->
                             <div class="mb-3">
-                                <label for="image" class="form-label bold">Image URL:</label>
-                                <input type="file" name="avatar" id="image" required/>
+                                <label for="recipe-image" class="form-label bold">Image URL:</label>
+                                <input type="file" id="recipe-image" name="recipe-image" required/>
                             </div>
                             <!--<div class="mb-3">
                                 <label for="imageUrl" class="form-label bold">Tag:s</label>
@@ -37,3 +39,6 @@
                 </div>
             </div>
         </div>
+
+        
+    <script src="./js/createRecipe.js"></script>
