--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,8 +10,7 @@
     <div class="row justify-content-center">
         <div class="col-6">
             <p><span class="bold">Username:</span> {{username}}</p>
-           <p><span class="bold">Email:</span> {{email}}</p> 
-             <p><span class="bold">Joined:</span> {{joinDate}}</p>
+            <p><span class="bold">Joined:</span> {{joinDate}}</p>
         </div>
         <div class="col-6">
         </div>
@@ -29,14 +28,17 @@
 
 <div class="container lg-card-body rounded-bottom p-5 mb-2">
     <div class="row justify-content-center">
-        {{#each userRecipes}} <!-- query to just return this user's recipes -->
+        {{#each userRecipes}}
         <div class="col-sm-3 col-6 mb-4">
-            <div class="card position-relative">
-                <img src="{{recipe.image}}" alt="{{recipe.title}}" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">{{title}}</h5>
+            <a href="/recipes/{{this.dataValues.id}}">
+                <div class="card position-relative">
+                    <img src="{{this.dataValues.image}}" alt="{{this.dataValues.title}}"
+                        class="card-img-top custom-image">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.dataValues.title}}</h5>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         {{/each}}
     </div>
@@ -46,7 +48,7 @@
 <div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
     <div class="row justify-content-center">
         <div class="col-12 mb-2">
-            <h2>{{{ username }}}'s' Comments</h2>
+            <h2>{{{ username }}}'s Comments</h2>
         </div>
     </div>
 </div>
@@ -54,12 +56,14 @@
     <div class="row justify-content-center">
         {{#each comments}}
         <div class="col-12 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{comment.Recipe.title}}</h5>
-                    <p class="card-text">{{comment.body}}</p>
+            <a href="/recipes/{{this.dataValues.id}}">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.dataValues.recipe.dataValues.title}}</h5>
+                        <p class="card-text">{{this.dataValues.body}}</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         {{/each}}
     </div>
