--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                {{#if loggedIn}}
+                {{#if logged_in}}
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/dashboard/{{userId}}">My Recipes</a></li>
                 <li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
