--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
             <ul class="navbar-nav ms-auto">
                 {{#if logged_in}}
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/dashboard/{{userId}}">My Recipes</a></li>
+                <li class="nav-item"><a class="nav-link" href="/users/{{user_id}}">My Recipes</a></li>
                 <li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
                 <li class="nav-item"><a class="nav-link" href="/newrecipe">+New Recipe</a></li>
                 <li class="nav-item"><a class="nav-link" href="/login" id="logout">Logout</a></li>
