added the top of the comments card

--- a/views/recipepage.handlebars
+++ b/views/recipepage.handlebars
@@ -33,6 +33,13 @@
 </div>
 
 {{#if loggedIn}}
+<div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
+    <div class="row justify-content-center">
+        <div class="col-12 mb-2">
+            <h2>Comments</h2>
+        </div>
+    </div>
+</div>
     <div class="container lg-card-body rounded-bottom p-5 mb-4">
         <div class="row justify-content-center mb-4">
             <div class="col-12">
