got the login to work.

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,12 +11,12 @@
             <!-- Login Form -->
         <form class="col-8 login-form">
             <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username-login" name="username" required>
+                <label for="username-login" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username-login" required>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password-login" name="password" required>
+                <label for="password-login" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password-login" required>
             </div>
             <button type="submit" id="login-button" class="cstm-btn btn btn-primary">Login</button>
         </form>
