removed join date for now

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,7 +10,7 @@
     <div class="row justify-content-center">
         <div class="col-6">
             <p><span class="bold">Username:</span> {{username}}</p>
-            <p><span class="bold">Joined:</span> {{joinDate}}</p>
+            {{!-- <p><span class="bold">Joined:</span> {{joinDate}}</p> --}}
         </div>
         <div class="col-6">
         </div>
