--- a/views/recipepage.handlebars
+++ b/views/recipepage.handlebars
@@ -9,13 +9,10 @@
 <div class="container lg-card-body rounded-bottom p-5 mb-4">
     <div class="row justify-content-center">
         <div class="row justify-content-center">
-            <div class="col-sm-3 col-6 position-relative">
-                <div class="position-absolute bottom-box-2">
-                    {{recipe.User.username}}
-                </div>
-                <img src="{{recipe.image}}" alt="Dish 1" id="image" class="card-img-top rounded-bottom">
+            <div class="col-sm-12 col-md-6 col-lg-3 position-relative">
+                <img src="{{recipe.image}}" alt="{{recipe.title}}" id="image" class="card-img-top rounded-bottom">
             </div>
-            <div class="col-sm-9 col-6">
+            <div class="col-sm-12 col-md-6 col-lg-9">
                 <h4>Ingredients:</h4>
                 <ul>
                     {{#each recipe.ingredients}}
