making it more mobile friendly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,3 +163,12 @@ li {
 #recipe-author a:hover { 
     color: var(--light);
 }
+
+@media (max-width: 666px) {
+    .navbar-brand h1 {
+        font-size: 1.5rem; 
+    }
+    .navbar {
+        width: 100vw;
+    }
+}
