--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,53 +8,56 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
         rel="stylesheet">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
 
     <!-- Nav -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-5 px-5 cstm-light-text bottom-border">
-    <div class="container-fluid align-items-end">
-        <a class="navbar-brand" href="/">
-            <h1>My Recipe Book</h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                {{#if logged_in}}
-                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/users/{{user_id}}">My Recipes</a></li>
-                <li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
-                <li class="nav-item"><a class="nav-link" href="/newrecipe">+New Recipe</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login" id="logout">Logout</a></li>
-                {{else}}
-                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="/signup">Signup</a></li>
-                {{/if}}
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-5 px-5 cstm-light-text bottom-border">
+        <div class="container-fluid align-items-end">
+            <a class="navbar-brand" href="/">
+                <h1>My Recipe Book</h1>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    {{#if logged_in}}
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/users/{{user_id}}">My Recipes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/newrecipe">+New Recipe</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login" id="logout">Logout</a></li>
+                    {{else}}
+                    <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/signup">Signup</a></li>
+                    {{/if}}
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-
+    </nav>
 
     <!-- Main ((Dynamic)) -->
-    <main class="container container-fluid mx-5">
+    <main class="container mx-2 mx-md-5">
         {{{ body }}}
 
         {{#if logged_in}}
         <script src="/js/logout.js"></script>
         {{/if}}
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     </main>
 
 </body>
